Add encryption and decryption working for one user